--- a/src/assets/css/boostrap/_variables.scss
+++ b/src/assets/css/boostrap/_variables.scss
@@ -38,10 +38,10 @@ $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #dc3545 !default;
+$red:     #fc4661 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$green:   #27c97b !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
@@ -167,9 +167,9 @@ $paragraph-margin-bottom:   1rem !default;
 $grid-breakpoints: (
   xs: 0,
   sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px
+  md: 1024px,
+  lg: 1440px,
+  xl: 1920px
 ) !default;
 
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
@@ -182,9 +182,9 @@ $grid-breakpoints: (
 
 $container-max-widths: (
   sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px
+  md: 960px,
+  lg: 1380px,
+  xl: 18600px
 ) !default;
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
