--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -1,3 +1,11 @@
+@import "left_panel";
+
+@font-face {
+  font-family: "Avenir Next";
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/Avenir Next Regular.otf')
+}
 .it-title {
   font-size: 21px;
   font-weight: 600;
@@ -94,4 +102,25 @@
   padding: 5px 10px 5px 10px;
   font-size: 12px;
   color: #282e3d
+}
+.it-container {
+  position: relative;
+  width: 100%;
+  min-width: 1024px;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  min-height: 1358px;
+  font-family: "Avenir Next",sans-serif !important;
+  font-size: 14px;
+  color: #1b1f2b;
+  background-color: rgba(40, 46, 61, 0.07);
+}
+.it-page {
+  margin-left: 94px;
+  background-color: #ffffff;
+  height: auto;
+  border-top-left-radius: 5px;
+  box-shadow: -1px -1px 8px 0 rgba(0, 0, 0, .2);
+  padding-left: 2em
 }
