--- a/src/assets/css/boostrap/_variables.scss
+++ b/src/assets/css/boostrap/_variables.scss
@@ -41,7 +41,7 @@ $pink:    #e83e8c !default;
 $red:     #fc4661 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #27c97b !default;
+$green:   #27ae66 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
