--- a/src/assets/css/_left_panel.scss
+++ b/src/assets/css/_left_panel.scss
@@ -21,4 +21,19 @@
     width: 100%;
     height: auto;
   }
+  .active {
+    background-color: white;
+    box-shadow: -1px -1px 8px 0 rgba(0, 0, 0, .2);
+    z-index: 0;
+  }
+  .item {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    p {
+      margin-bottom: 0;
+    }
+  }
 }
