--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -2,6 +2,7 @@
 
 @import "left_panel";
 @import "top_panel";
+@import "wallet";
 
 @font-face {
   font-family: "Avenir Next";
@@ -16,6 +17,21 @@
   @media (min-width: 1440px) {
     font-size: 34px;
   }
+}
+.it_page_title {
+  font-size: 28px;
+}
+.it_cycle_times {
+  width: 38px;
+  height: 38px;
+  background-color: #eceff4;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  font-size: 20px;
+  opacity: 0.8;
+  position: absolute;
+  right: 40px;
 }
 .it-char {
   span {
@@ -79,6 +95,18 @@
 }
 .it-fs18 {
   font-size: 18px;
+}
+.it-fs24 {
+  font-size: 24px;
+}
+.it-fs34 {
+  font-size: 24px;
+}
+.it_light_opacity {
+  opacity: 0.8;
+}
+.it_bg_silver {
+  background-color: #bebebe;
 }
 .it-hr-text {
   margin-top: 0;
@@ -155,7 +183,8 @@
   height: auto;
   border-top-left-radius: 5px;
   box-shadow: -1px -1px 8px 0 rgba(0, 0, 0, .2);
-  padding-left: 2em
+  padding-left: 2em;
+  position: relative;
 }
 .it-market-history-extra-col {
   @media (min-width: 1440px) {
