--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -15,6 +15,7 @@
     margin-right: 2px;
     text-align: left;
     opacity: 0.8;
+    cursor: pointer;
   }
   .active {
     background-color: #ffffff;
