--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -4,6 +4,8 @@
 @import "top_panel";
 @import "wallet";
 @import "my_orders";
+@import "my_orders_full";
+
 
 @font-face {
   font-family: "Avenir Next";
