--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -5,6 +5,7 @@
 @import "wallet";
 @import "my_orders";
 @import "my_orders_full";
+@import "add_currency";
 
 
 @font-face {
@@ -35,6 +36,18 @@
   opacity: 0.8;
   position: absolute;
   right: 40px;
+}
+.it_cycle_item {
+  width: 38px;
+  height: 38px;
+  background-color: #eceff4;
+  border-radius: 50%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 45px;
+  font-size: 20px;
+  opacity: 0.8;
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.4);
 }
 .it-char {
   span {
@@ -182,6 +195,7 @@
   font-size: 14px;
   color: #1b1f2b;
   background-color: rgba(40, 46, 61, 0.07);
+  overflow-x: hidden;
 }
 .it-page {
   margin-left: 94px;
