Поправил верхние меню

--- a/src/assets/css/_left_panel.scss
+++ b/src/assets/css/_left_panel.scss
@@ -2,7 +2,7 @@
   width: 94px;
   height: 100%;
   background-color: #f5f7fa;
-  position: absolute;
+  position: fixed;
   .logo {
     width: 30px;
   }
