--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -21,6 +21,20 @@
     background-color: #ffffff;
     opacity: 1;
     z-index: 10;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-bottom: 0;
+    position: relative;
+    .white_bottom {
+      position: absolute;
+      width: 178px;
+      height: 1px;
+      background: #ffffff;
+      bottom: -1px;
+      left: 0;
+    }
+    .nav-desc {
+      top: 18px;
+    }
   }
   .times {
     opacity: 0.3;
@@ -32,6 +46,9 @@
     p:last-child {
       padding-left: 0.5em;
       line-height: 25px;
+    }
+    p:first-child {
+      padding-left: 1px;
     }
   }
   .add {
@@ -53,22 +70,19 @@
     height: 26px;
     border-radius: 13px;
     background-color: #dbe1ec;
-    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.12);
     margin-top: 9px;
     margin-right: 15px;
     div {
       width: 36px;
-      opacity: 0.8;
       border-radius: 13px;
       background-color: #ffffff;
-      box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.4);
-      font-size: 16px;
+      border: 1px solid #C6CBD5;
       text-align: center;
-      line-height: 27px;
     }
     .non_active {
       margin-left: 10px;
-      line-height: 27px;
+      margin-top: 6px;
     }
   }
 }
