--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -24,6 +24,7 @@
     border: 1px solid rgba(0, 0, 0, .2);
     border-bottom: 0;
     position: relative;
+    box-shadow: 0 -1px 2px 0px rgba(0,0,0,0.2);
     .white_bottom {
       position: absolute;
       width: 178px;
