--- a/src/assets/css/boostrap/_variables.scss
+++ b/src/assets/css/boostrap/_variables.scss
@@ -38,7 +38,7 @@ $blue:    #3454d1 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #fc4661 !default;
+$red:     #f26451 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffa933 !default;
 $green:   #27ae66 !default;
