--- a/src/assets/css/_wallet.scss
+++ b/src/assets/css/_wallet.scss
@@ -73,7 +73,8 @@
         text-align: center;
         border-radius: 50%;
         font-size: 20px;
-        line-height: 40px;
+        line-height: 38px;
+        padding-left: 2px;
         box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18);
         border: 1px solid rgba(0, 0, 0, .2);
       }
