--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -27,11 +27,11 @@
     box-shadow: 0 -1px 2px 0px rgba(0,0,0,0.2);
     .white_bottom {
       position: absolute;
-      width: 178px;
+      width: 177px;
       height: 10px;
       background: #ffffff;
       bottom: -5px;
-      left: 0;
+      left: 1px;
     }
     .nav-desc {
       top: 18px;
