--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -1,10 +1,10 @@
 .it-top-panel {
-  height: 46px;
+  height: auto;
   width: calc(100% - 96px);
   background-color: #f5f7fa;
   margin-left: 94px;
   position: absolute;
-  overflow-y: hidden;
+  overflow-x: hidden;
   .nav-item {
     background-color: rgba(40, 46, 61, 0.07);
     height: 44px;
@@ -25,18 +25,11 @@
     background-color: #ffffff;
     opacity: 1;
     z-index: 10;
+    height: 45px;
     border: 1px solid rgba(0, 0, 0, .2);
     border-bottom: 0;
     position: relative;
-    box-shadow: 0 -1px 2px 0px rgba(0,0,0,0.2);
-    .white_bottom {
-      position: absolute;
-      width: 178px;
-      height: 10px;
-      background: #ffffff;
-      bottom: -5px;
-      left: 0px;
-    }
+    box-shadow: 0px -2px 2px 0px rgba(0, 0, 0, 0.2);
     .nav-desc {
       top: 18px;
     }
