--- a/src/assets/css/_my_orders_full.scss
+++ b/src/assets/css/_my_orders_full.scss
@@ -1,13 +1,22 @@
 .my_orders_full {
-  position: absolute;
-  z-index: 5;
+  position: fixed;
+  z-index: 1;
   left: 94px;
-  top: 46px;
+  top: 47px;
   width: calc(100% - 94px);
   background-color: white;
   height: calc(100% - 46px);
   box-shadow: 0px 0px 8px 0 rgba(0, 0, 0, .2);
   border-top-right-radius: 5px;
+  overflow-x: hidden;
+  padding-left: 2em;
+  padding-right: 2em;
+  .col {
+    padding: 0;
+  }
+  .form-control-sm {
+    height: 23px;
+  }
   .export_btn_small {
     display: none;
     @media (max-width: 1440px) {
