--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -300,6 +300,7 @@ body {
     padding-right: 1.5em;
     padding-left: 1.5em;
     line-height: 15px;
+    text-align: center;
     span {
       opacity: 0.5;
     }
