--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -118,7 +118,7 @@ body {
   }
 }
 .it-trading_view {
-  height: 500px;
+  height: 512px;
 }
 .it-medium {
   font-weight: 500;
@@ -361,5 +361,13 @@ body {
     button {
       width: 50%;
     }
+  }
+  .col-lg-9 {
+    flex: 0 0 80%;
+    max-width: 80%;
+  }
+  .col-lg-3 {
+    flex: 0 0 20%;
+    max-width: 20%;
   }
 }
