--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -8,6 +8,7 @@
 @import "add_currency";
 @import "analytics";
 @import "traders";
+@import "trader";
 
 
 @font-face {
@@ -140,6 +141,9 @@ body {
 .it-fs12 {
   font-size: 12px;
 }
+.it-fs13 {
+  font-size: 13px;
+}
 .it-fs11 {
   font-size: 12px;
 }
@@ -163,6 +167,9 @@ body {
 }
 .it-fs34 {
   font-size: 24px;
+}
+.it-fs36 {
+  font-size: 36px;
 }
 .it_light_opacity {
   opacity: 0.8;
@@ -313,7 +320,9 @@ body {
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
     border-right: 1px solid silver;
-
+  }
+  .it-btn_m {
+    border-left: 1px solid silver;
   }
   .it-btn:last-child {
     border-left: 1px solid silver;
