--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -346,6 +346,7 @@ body {
     background-color: #ffffff;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
     font-weight: 600;
+    color: #282e3d;
   }
 }
 .it-delimiter {
