--- a/src/assets/css/_markets_list.scss
+++ b/src/assets/css/_markets_list.scss
@@ -33,12 +33,7 @@
         }
       }
     }
-    .icon-fa {
-      font-size: 28px;
-      position: relative;
-      top: 2px;
-    }
-    .tile {
+    .type_icon {
       position: relative;
       top: 9px;
     }
