--- a/src/assets/css/_post.scss
+++ b/src/assets/css/_post.scss
@@ -29,10 +29,15 @@
     }
   }
   .post {
-    margin-top: 25px;
+    margin-top: 30px;
     background-color: #f5f7fa;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
     position: relative;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     .share {
       position: relative;
       top: -8px;
