--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -75,16 +75,41 @@
     box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.12);
     margin-top: 9px;
     margin-right: 15px;
-    div {
+    div.active {
       width: 36px;
       border-radius: 13px;
       background-color: #ffffff;
       border: 1px solid #C6CBD5;
       text-align: center;
+      height: 26px;
+      img {
+        height: 14px;
+      }
     }
-    .non_active {
-      margin-left: 10px;
+    div.non_active {
+      position: relative;
+      top: -4px;
+      margin-left: 8px;
       margin-top: 6px;
+      img {
+        width: 14px;
+      }
+    }
+  }
+  .theme-switch.reverse {
+    div.active {
+      position: relative;
+      right: -13px;
+      background-color: #3a4255;
+      border: solid 1px #0a0c12;
+      img {
+        position: relative;
+        top: 2px;
+      }
+    }
+    div.non_active {
+      left: 8px;
+      background-color: transparent !important;
     }
   }
 }
